Enhancement: Now logs authorization and authentication errors as per Dusan's PR review comments. Code merge: Added in the appropriate code from develop that should allow this to merge cleanly.